# hwdc-2025-mcp-league-starter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  package.json  pnpm-lock.yaml  pr.md
.github/: pull_request_template.md
backend/: .env.example  README.md  pyproject.toml  pytest.ini  server.py
backend/docs/: CODING_STANDARDS.md  FOLDER_STRUCTURE.md
backend/docs/architecture/: api-layer.md  domain-layer.md  integrations-layer.md  mcp-integration.md  services-layer.md  usecases-layer.md
backend/docs/error-handling/: README.md  development.md
backend/docs/testing/: integration-testing.md  unit-testing.md
backend/src/: config.py  main.py
backend/src/api/: __init__.py  exception_handlers.py
backend/src/api/v1/: conversation_router.py  mcp_router.py
backend/src/core/: __init__.py  exceptions.py  logging.py  middleware.py
backend/src/integrations/llm/: __init__.py  config_store.py  factory.py  model_config.py  providers.py
backend/src/integrations/mcp/: __init__.py  config.py  default_servers.json  manager.py  server_params.py  settings.py  tool_registry.py  toolkit.py
backend/src/integrations/utils/: __init__.py  model_factory.py  tool_registry.py
backend/src/models/: __init__.py  base.py  conversation.py  mcp.py
backend/src/shared/: __init__.py  response.py
backend/src/shared/exceptions/: __init__.py  document.py  llm.py  mcp.py  permission.py  resource.py  user.py  validation.py
backend/src/utils/: time.py
backend/tests/: conftest.py
(+76 files in other folders)
