[project]
name = "backend"
version = "0.1.0"
description = "HWDC 2025 FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8080"
start = "uvicorn src.main:app --host 0.0.0.0 --port 8080"

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
