[project]
name = "backend"
version = "0.1.0"
description = "HWDC 2025 FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "agno",
    "ollama>=0.5.4",
    "openai>=1.108.1",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
    "ruff",
    "mypy",
    "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "C4", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["src/"]
